--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,27 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+     <% if user_signed_in? %>
+      <li>
+       <%= "Home" %>
+      </li>
+      <li>
+       <%= "Users" %>
+      </li>
+      <li>
+       <%= "Bookes" %>
+      </li>
+      <li>
+       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+      </li>
+       <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
