--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,9 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="containar">
+ <div class="row">
+  <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+   <h1>"welcome to"
+   <i class="fa-solid fa-book"></i>
+   <strong>Bookers</strong>!!</h1>
+  </div>
+ </div>
+</div>
