--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,28 +5,64 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
+    <script src="https://kit.fontawesome.com/a3b0def78c.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-     <% if user_signed_in? %>
-      <li>
-       <%= "Home" %>
-      </li>
-      <li>
-       <%= "Users" %>
-      </li>
-      <li>
-       <%= "Bookes" %>
-      </li>
-      <li>
-       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-       <% end %>
-    </header>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+       <a class="navbar-brand">
+        <span>Bookers</span>
+       </a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+         <% if user_signed_in? %>
+          <li>
+           <%= "Home" %>
+          </li>
+          <li>
+           <%= "Users" %>
+          </li>
+          <li>
+           <%= "Bookes" %>
+          </li>
+          <li>
+           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+          </li>
+         <% else %>
+          <li>
+           <a class="nav-link text-light">
+             <i class="fa-duotone fa-house-chimney"></i>
+            <%= "Home" %>
+            </a>
+          </li>
+          <li>
+           <a class="nav-link text-light">
+            <%= "About" %>
+            </a>
+          </li>
+          <li>
+           <a class="nav-link text-light">
+            <%= "Sign up" %>
+            </a>
+          </li>
+          <li>
+           <a class="nav-link text-light">
+           <%= "Log in" %>
+           </a>
+          </li>
+         <% end %>
+        </ul>
+       </div>
+      </nav>
+     </header>
     <%= yield %>
   </body>
 </html>
