--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
  
+ *{
+  box-sizing: border-box;
+ }
+ 
 .text-light {
     color: #f8f9fa!important;
 }
@@ -25,3 +29,9 @@
     justify-content: space-between;
 }
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
