--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,22 +39,25 @@
          <% else %>
           <li>
            <a class="nav-link text-light">
-             <i class="fa-duotone fa-house-chimney"></i>
+             <i class="fa-solid fa-house"></i>
             <%= "Home" %>
             </a>
           </li>
           <li>
            <a class="nav-link text-light">
+            <i class="fa-sharp fa-solid fa-link"></i>
             <%= "About" %>
             </a>
           </li>
           <li>
            <a class="nav-link text-light">
+            <i class="fa-solid fa-user-plus"></i>
             <%= "Sign up" %>
             </a>
           </li>
           <li>
            <a class="nav-link text-light">
+            <i class="fa-solid fa-right-to-bracket"></i>
            <%= "Log in" %>
            </a>
           </li>
@@ -65,4 +68,14 @@
      </header>
     <%= yield %>
   </body>
+  
+  <footer>
+   <div class="container mt-5">
+    <div class="row">
+     <div class="mx-auto">
+      <p>CopyRight Infratop.inc</p>
+     </div>
+    </div>
+   </div>
+  </footer>
 </html>
