--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,4 @@
+<main>
 <p id="notice"></p>
 <div class="container">
  <div class="row">
@@ -13,12 +14,17 @@
    <p>about various books!</p>
    <div class="btn-wrapper col-10 mx-auto">
     <div class="row">
-     <a class="btn btn-info btn-sm btn-block mb-3 sign-in">Log in</a>
+     <%= link_to new_user_session_path, class: 'btn btn-info btn-sm btn-block mb-3 sign-in' do %>
+      Log in
+      <% end %>
     </div>
     <div class="row">
-     <a class="btn btn-success btn-sm btn-block sign-up">Sign up</a>
+     <%= link_to new_user_registration_path, class:'btn btn-success btn-sm btn-block sign-up' do %>
+      Sign up
+      <% end %>
     </div>
    </div>
   </div>
  </div>
 </div>
+</main>
