--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+
     <script src="https://kit.fontawesome.com/a3b0def78c.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -15,60 +15,66 @@
     <header>
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-       <a class="navbar-brand">
+       <a class="navbar-brand" href="/">
         <span>Bookers</span>
        </a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-       </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+      </button>
        <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
          <% if user_signed_in? %>
           <li>
-           <%= "Home" %>
+           <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
+           <i class="fa-solid fa-house"></i> Home
+           <% end %>
           </li>
           <li>
-           <%= "Users" %>
+            <%= link_to users_path, class: 'nav-link text-light' do %>
+            <i class="fa-solid fa-users"></i> Users
+           <% end %>
           </li>
           <li>
-           <%= "Bookes" %>
+           <%= link_to books_path, class: 'nav-link text-light' do %>
+            <i class="fa-solid fa-book-open"></i> Books
+           <% end %>
           </li>
           <li>
-           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+           <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+           <i class="fa-solid fa-right-from-bracket"></i> Log out
+           <% end %>
           </li>
          <% else %>
           <li>
-           <a class="nav-link text-light">
-             <i class="fa-solid fa-house"></i>
-            <%= "Home" %>
+          <%= link_to root_path, class: 'nav-link text-light' do %>
+           <i class="fa-solid fa-house"></i> Home
+           <% end %>
+          </li>
+          <li>
+           <%= link_to about_path, class: 'nav-link text-light' do %>
+            <i class="fa-sharp fa-solid fa-link"></i> About
+            <% end %>
             </a>
           </li>
           <li>
-           <a class="nav-link text-light">
-            <i class="fa-sharp fa-solid fa-link"></i>
-            <%= "About" %>
-            </a>
+           <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+            <i class="fa-solid fa-user-plus"></i>Sign up
+            <% end %>
           </li>
           <li>
-           <a class="nav-link text-light">
-            <i class="fa-solid fa-user-plus"></i>
-            <%= "Sign up" %>
-            </a>
-          </li>
-          <li>
-           <a class="nav-link text-light">
-            <i class="fa-solid fa-right-to-bracket"></i>
-           <%= "Log in" %>
-           </a>
+            <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+            <i class="fa-solid fa-right-to-bracket"></i> Log in
+            <% end %>
           </li>
          <% end %>
         </ul>
+       </div>
        </div>
       </nav>
      </header>
     <%= yield %>
   </body>
-  
+
   <footer>
    <div class="container mt-5">
     <div class="row">
