--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,25 @@
-<h1>book一覧</h1>
+<h2>User info</h2>
+
+
+
+
+
+<h2>New book</h2>
+<%= form_with model: @book do |f| %>
+
+<div class="form-group">
+  <label for="book-title">Title</label><br>
+  <%= f.text_field :title %>
+</div>
+
+<div class="form-group">
+  <label for="book-opinion">Opinion</label><br>
+  <%= f.text_area :body %>
+</div>
+
+
+<div class="form-group">
+  <%= f.submit 'Create Book' %>
+</div>
+
+<% end %>
