--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,22 +1,19 @@
-<h5>ユーザー詳細</h5>
-
-
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
+      <%= image_tag user.get_profile_image(100,100) %>
      <table class="table">
       <tbody>
        <tr></tr>
        <tr>
         <th>name</th>
-        <th><%= @user.name %></th>
+        <th><%= user.name %></th>
        </tr>
        <tr>
         <th>introduction</th>
-        <th><%= @user.introduction %></th>
+        <th><%= user.introduction %></th>
        </tr>
       </tbody>
      </table>
