--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,58 +1,2 @@
-<p id="notice"></p>
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
-     <h2>User info</h2>
-     <table class="table">
-      <tbody>
-       <tr></tr>
-       <tr>
-        <th>name</th>
-        <th>名前</th>
-       </tr>
-       <tr>
-        <th>introduction</th>
-        <th></th>
-       </tr>
-      </tbody>
-     </table>
-
-     <div class="row"></div>
-     
-    
-<h2>New book</h2>
-<%= form_with model: @book do |f| %>
-
-<div class="form-group">
-  <label for="book-title">Title</label><br>
-  <%= f.text_field :title %>
-</div>
-
-<div class="form-group">
-  <label for="book-opinion">Opinion</label><br>
-  <%= f.text_area :body %>
-</div>
-
-<div class="form-group">
-  <%= f.submit 'Create Book' %>
-</div>
-
-<% end %>
-</div>
-<div class="col-md-8 offset-md-1">
-  <h2>Books</h2>
-  <table class="table table-hover table-inverse">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
-</div>
-</div>
-</div>
+<h5>本一覧</h5>
+<%= render 'users/list', user: @user, book: @book %>
