--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -2,7 +2,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-     <h2>User info</h2>
+　　 <h2>User info</h2>
       <%= image_tag user.get_profile_image(100,100) %>
      <table class="table">
       <tbody>
@@ -18,11 +18,32 @@
       </tbody>
      </table>
 
+
+
      <div class="row">
-      <%= link_to edit_user_path, class:'btn btn-outline-secondary btn-block' do %>
+      <%= link_to edit_user_path(user.id), class:'btn btn-outline-secondary btn-block' do %>
       <i class="fa-solid fa-user-gear"></i>
       <% end %>
      </div>
+
+     <h2 class="mt-3">New book</h2>
+     <%= form_with model: book do |f| %>
+
+      <div class="form-group">
+       <label for="book-title">Title</label><br>
+       <%= f.text_field :title ,class:'form-control book_title' %>
+      </div>
+
+      <div class="form-group">
+       <label for="book-opinion">Opinion</label><br>
+       <%= f.text_area :body ,class:'form-control book_body' %>
+      </div>
+
+      <div class="form-group">
+       <%= f.submit 'Create Book',class:'btn btn-success' %>
+      </div>
+
+       <% end %>
      </div>
     </div>
    </div>
