--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,23 @@
 <h5>本一覧</h5>
+
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+      
 <%= render 'users/list', user: @user, book: @book %>
+
+<div class="col-md-8 offset-md-1">
+ <h2>Books</h2>
+ <table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+    <th></th>
+    <th>Title</th>
+    <th>Opinion</th>
+    <th colspan="3"></th>
+   </tr>
+  </thead>
+ </table>
+</div>
+ </div>
+</div>
