--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
       <%= form_with model: @user do |f| %>
        <div class="form-group">
         <label for="user_name">Name</label><br>
-        <%= f.text_field :name, autofocus: true, id:"user_name" %>
+        <%= f.text_field :name, autofocus: true, id:"user_name" ,class:'form-control name' %>
        </div>
        <div class="form-group">
         <label for="user_image">Image</label><br>
@@ -14,10 +14,10 @@
        </div>
        <div class="form-group">
         <label for="user_introduction">Introduction</label><br>
-        <%= f.text_area :introduction %>
+        <%= f.text_area :introduction ,class:'form-control introduction'%>
        </div>
        <div class="form-group">
-        <%= f.submit "Update User" %>
+        <%= f.submit "Update User" ,class:'btn btn-secondary' %>
        </div>
       <% end %>
 
