--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,27 @@
 <h5>ユーザー一覧</h5>
 
-<%= render 'list', user: @user, book: @book%>
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+
+ <%= render 'list', user: @user, book: @book %>
+
+<div class="col-md-8 offset-md-1">
+ <h2>Users</h2>
+ <table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+    <th>image</th>
+    <th>name</th>
+    <th colspan="3"></th>
+   </tr>
+  </thead>
+  <tbody>
+   <td><%= image_tag @user.get_profile_image(80,80) %></td>
+   <td><%= @user.name %></td>
+   <td><%= link_to 'show', user_path(current_user.id) %></td>
+  </tbody>
+ </table>
+</div>
+ </div>
+</div>
