--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,32 @@
+<h5>ユーザー詳細</h5>
 
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
 
 <%= render 'list', user: @user, book: @book %>
+
+<div class="col-md-8 offset-md-1">
+ <h2>Books</h2>
+ <table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+    <th></th>
+    <th>Title</th>
+    <th>Opinion</th>
+    <th colspan="3"></th>
+   </tr>
+  </thead>
+  <tbody>
+   <% @books.each do |book| %>
+   <tr>
+    <td><%= image_tag @user.get_profile_image(80,80) %></td>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+   </tr>
+   <% end %>
+  </tbody>
+ </table>
+</div>
+ </div>
+</div>
