--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,26 @@
-<h1>本の編集画面</h1>
+<h5>本の編集画面</h5>
+
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book do |f| %>
+       <div class="form-group">
+         <lavel for="book_title">Title</lavel><br>
+         <%= f.text_field :title ,class:'form-control book_title' %>
+       </div>
+       <div class="form-group">
+         <lavel for="book_opinion">Opinion</lavel><br>
+         <%= f.text_area :body ,class:'form-control book_body' %>
+       </div>
+       <div class="form-group">
+         <%= f.submit "Update Book" ,class:'btn btn-success' %>
+       </div>
+       <% end %>
+       <%= link_to "Show" ,book_path(@book.id) %>
+       |
+       <%= link_to "Back" ,books_path %>
+    </div>
+  </div>
+ </div>
