--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-      
+
 <%= render 'users/list', user: @user, book: @book %>
 
 <div class="col-md-8 offset-md-1">
@@ -17,6 +17,12 @@
     <th colspan="3"></th>
    </tr>
   </thead>
+  <tbody>
+   <tr>
+    <td><%= image_tag @user.get_profile_image(80,80) %></td>
+    <td></td>
+   </tr>
+  </tbody>
  </table>
 </div>
  </div>
