--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,15 @@
    </tr>
   </thead>
   <tbody>
-   <td><%= image_tag @user.get_profile_image(80,80) %></td>
-   <td><%= @user.name %></td>
+
+   <% @users.each do |user| %>
+   <tr>
+   <td><%= image_tag user.get_profile_image(80,80) %></td>
+   <td><%= user.name %></td>
    <td><%= link_to 'show', user_path(current_user.id) %></td>
+   </tr>
+   <% end %>
+
   </tbody>
  </table>
 </div>
