--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,10 +18,13 @@
    </tr>
   </thead>
   <tbody>
+   <% @books.each do |book| %>
    <tr>
     <td><%= image_tag @user.get_profile_image(80,80) %></td>
-    <td></td>
+    <td><%= link_to book.title, user_path(current_user.id) %></td>
+    <td><%= book.body %></td>
    </tr>
+   <% end %>
   </tbody>
  </table>
 </div>
