--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,18 +1,18 @@
-<h1>本詳細</h1>
+<h5>本詳細</h5>
 
-<p id="notice"></p>
+<%= flash[:notice] %>
 <div class="container px-5 px-sm-0">
   <div class="row">
 
-<%= render 'users/list', user: @user, book: @book %>
+<%= render 'users/list', user: @user, book: @book_new %>
 
 <div class="col-md-8 offset-md-1">
  <h2>Book detail</h2>
  <table class="table">
   <tbody>
    <tr>
-    <td><%= image_tag @user.get_profile_image(80,80) %><br><%= @user.name %></td>
-    <td><%= @book.title %></td>
+    <td><%= image_tag @user.get_profile_image(80,80) %><br><%= link_to @user.name, user_path(current_user.id) %></td>
+    <td><%= link_to @book.title, book_path(@book.id) %></td>
     <td><%= @book.body %></td>
     <td><%= link_to edit_book_path(@book.id), class:'btn btn-sm btn-success' do  %>
         Edit
