--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
    <% @books.each do |book| %>
    <tr>
     <td><%= image_tag @user.get_profile_image(80,80) %></td>
-    <td><%= book.title %></td>
+    <td><%= link_to book.title, book_path(book.id) %></td>
     <td><%= book.body %></td>
    </tr>
    <% end %>
