--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -23,6 +23,16 @@
      </div>
 
      <h2 class="mt-3">New book</h2>
+
+     <% if book.errors.any? %>
+     <%= book.errors.count %>errors prohibited this obj from being saved:
+     <ul>
+      <% book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+     </ul>
+     <% end %>
+     
      <%= form_with model: book do |f| %>
 
       <div class="form-group">
