--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,15 +11,19 @@
  <table class="table">
   <tbody>
    <tr>
-    <td><%= image_tag @user.get_profile_image(80,80) %><br><%= link_to @user.name, user_path(current_user.id) %></td>
+    <td><%= image_tag @user.get_profile_image(80,80) %><br><%= link_to @user.name, user_path(@user.id) %></td>
     <td><%= link_to @book.title, book_path(@book.id) %></td>
     <td><%= @book.body %></td>
-    <td><%= link_to edit_book_path(@book.id), class:'btn btn-sm btn-success' do  %>
+    <td><% if @book.user == current_user %>
+     <%= link_to edit_book_path(@book.id), class:'btn btn-sm btn-success' do  %>
         Edit
         <% end %>
+        <% end %>
     </td>
-    <td><%= link_to book_path(@book.id), method: :delete, class:'btn btn-sm btn-danger' do %>
+    <td><% if @book.user == current_user %>
+     <%= link_to book_path(@book.id), method: :delete, class:'btn btn-sm btn-danger' do %>
         Destroy
+        <% end %>
         <% end %>
     </td>
    </tr>
