--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
    <tr>
    <td><%= image_tag user.get_profile_image(80,80) %></td>
    <td><%= user.name %></td>
-   <td><%= link_to 'show', user_path(current_user.id) %></td>
+   <td><%= link_to 'show', user_path(user.id) %></td>
    </tr>
    <% end %>
 
