--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,7 +1,7 @@
 
     <div class="col-md-3">
 　　 <h2>User info</h2>
-　　 
+
       <%= image_tag user.get_profile_image(100,100) %>
      <table class="table">
       <tbody>
@@ -16,11 +16,14 @@
        </tr>
       </tbody>
      </table>
-     
+
 
      <div class="row">
-      <%= link_to edit_user_path(user.id), class:'btn btn-outline-secondary btn-block' do %>
+      <% if user.id == current_user.id %>
+       <%= link_to edit_user_path(current_user.id) do %>
+        <div class="edit btn btn-outline-secondary btn-default btn-block"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></div>
       <i class="fa-solid fa-user-gear"></i>
+      <% end %>
       <% end %>
      </div>
 
