--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
  <table class="table">
   <tbody>
    <tr>
-    <td><%= image_tag @user.get_profile_image(80,80) %><br><%= link_to @user.name, user_path(@user.id) %></td>
+    <td><%= image_tag @book.user.get_profile_image(80,80) %><br><%= link_to @book.user.name, user_path(@book.user.id) %></td>
     <td><%= link_to @book.title, book_path(@book.id) %></td>
     <td><%= @book.body %></td>
     <td><% if @book.user == current_user %>
