--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -19,12 +19,9 @@
 
 
      <div class="row">
-      <% if user.id == current_user.id %>
-       <%= link_to edit_user_path(current_user.id) do %>
-        <div class="edit btn btn-outline-secondary btn-default btn-block"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></div>
+       <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
       <i class="fa-solid fa-user-gear"></i>
-      <% end %>
-      <% end %>
+       <% end %>
      </div>
 
      <h2 class="mt-3">New book</h2>
