--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,7 +3,7 @@
  <div class="row">
   <div class="px-3 mx-auto">
    <h1>Welcome to
-    <i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+    <i class="fas fa-book"></i><strong>Bookers</strong>!
    </h1>
    </div>
    </div>
