--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -16,6 +16,20 @@
        </tr>
       </tbody>
      </table>
+     <p><%= link_to user.followeds.count, followeds_user_path(user) %>フォロー
+        <%= link_to user.followers.count, followers_user_path(user) %>フォロワー
+     </p>
+     <% if user != current_user %>
+      <% if user.is_followed_by(current_user) %>
+       <%= link_to user_relationships_path(user), method: :delete do %>
+       <button class="btn btn-danger">フォロー解除</button>
+       <% end %>
+      <% else %>
+       <%= link_to user_relationships_path(user), method: :post do %>
+       <button class="btn btn-primary">フォロー</button>
+       <% end %>
+      <% end %>
+     <% end %>
 
 
      <div class="row">
