[add]ソート機能

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,6 +17,7 @@
    </tr>
   </thead>
   <tbody>
+   <%= link_to "新しい順", books_path(sort: 'created_at DESC') %>
    <% @books.each do |book| %>
    <tr>
     <td><%= link_to user_path(book.user.id) do %>
